Make test work with JDK17